--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<iframe width="840" height="630"
-src="https://www.youtube.com/watch?v=dQw4w9WgXcQ?autoplay=1">
+<iframe width="1600" height="900"
+src="https://www.youtube.com/watch?v=dQw4w9WgXcQ?autoplay=1&controls=0">
 </iframe> 
 </body>
 </html>
